--- a/template/iCMS/user/manage/publish.htm
+++ b/template/iCMS/user/manage/publish.htm
@@ -2,8 +2,8 @@
 iCMS.config.fileTypes = "*.<!--{$iCMS.config.FS.allow_ext|replace:',':';*.'}-->";
 iCMS.config.UI        = '<!--{$iCMS.UI}-->';
 </script>
-<link href="<!--{$iCMS.UI}-->/bootstrap-2.3.1/css/bootstrap-switch.css" type="text/css" rel="stylesheet"/>
-<script src="<!--{$iCMS.UI}-->/bootstrap-2.3.1/js/bootstrap-switch.min.js"></script>
+<link href="<!--{$iCMS.UI}-->/bootstrap/2.3.1/css/bootstrap-switch.css" type="text/css" rel="stylesheet"/>
+<script src="<!--{$iCMS.UI}-->/bootstrap/2.3.1/js/bootstrap-switch.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/iCMS.user.editor-6.0.0.js" type="text/javascript" charset="utf-8"></script>
 <script src="<!--{$iCMS.UI}-->/ueditor/ueditor.all.min.js" type="text/javascript" charset="utf-8"></script>
 
