--- a/app/admincp/ui/admincp-6.0.0.css
+++ b/app/admincp/ui/admincp-6.0.0.css
@@ -1,5 +1,23 @@
 body { background-color: #EDEDED; color: #000; }
 /* bootstrap */
+.btn, .add-on, .navbar-inner, .label, .navbar a, .switch-left, .switch-right { background-image: none !important; -webkit-box-shadow: none !important; -moz-box-shadow: none !important; box-shadow: none !important; }
+.form-inline input, .form-inline textarea, .form-inline select { color: #1A1A1A !important; }
+.tab-content { overflow: visible; /* background-color: #fff; border: 1px solid #ddd;  */ padding: 10px; border-top: 0px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; -webkit-border-top-left-radius: 0; -moz-border-radius-topleft: 0; border-top-left-radius: 0; -webkit-border-top-right-radius: 0; -moz-border-radius-topright: 0; border-top-right-radius: 0; }
+.add-on { background-color: #DFDFDF !important; background-clip: padding-box; box-shadow: 0 0 3px #fff inset, 0 1px 1px rgba(0, 0, 0, .1); color: #696969; }
+.input-prepend textarea { -webkit-border-top-left-radius: 0; -moz-border-radius-topleft: 0; border-top-left-radius: 0; -webkit-border-bottom-left-radius: 0; -moz-border-radius-bottomleft: 0; border-bottom-left-radius: 0; }
+.input-append textarea { -webkit-border-top-right-radius: 0; -moz-border-radius-topright: 0; border-top-right-radius: 0; -webkit-border-bottom-right-radius: 0; -moz-border-radius-bottomright: 0; border-bottom-right-radius: 0; }
+.btn-group-vertical > input { display: block; float: none; max-width: 100%; -webkit-border-bottom-right-radius: 0; -moz-border-radius-bottomright: 0; border-bottom-right-radius: 0; -webkit-border-bottom-left-radius: 0; -moz-border-radius-bottomleft: 0; border-bottom-left-radius: 0; }
+.navbar .divider-vertical { border-left: 1px solid #D4D4D4; }
+.navbar .nav>li>a { color: #888888; text-shadow: none; /* font-weight: bold; text-shadow: 0 1px 0 #f8f8f8;  */ }
+.navbar .nav>.active>a { color: #057AFD; }
+.navbar .nav li.dropdown.open>.dropdown-toggle, .navbar .nav li.dropdown.active>.dropdown-toggle, .navbar .nav li.dropdown.open.active>.dropdown-toggle { color: #057AFD; }
+.dropdown-menu li a:hover i, .dropdown-submenu:hover>a i { color: #fff !important; }
+.dropdown-menu li a:hover, .dropdown-menu>.active>a, .dropdown-menu .active a:hover { background-color: #057AFD; background-image: none; color: #f8f8f8; }
+.nav-tabs { margin-bottom: 0px; }
+.input-append a.btn { border: 1px solid #ccc !important; }
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { background-color: #08c; }
+
+/*bootstrap admincp*/
 .table th { background: #fafafa url("table_head.gif") repeat-x 0 100%; }
 .table td { background-color: #fff; }
 .table tbody .checker { margin-left: 3px !important; }
@@ -367,6 +385,7 @@ form { margin-bottom: 0; }
 .popover .content-big { font-size: 14px; font-weight: bold; }
 .popover .content-small { font-size: 11px; color: #777777; }
 /* Responsive design */
+
 @media (max-width:480px) {
 	#header h1 { top: auto; left: auto; margin: 3px auto; }
 	#user-nav { position: relative; left: auto; right: auto; width: 100%; margin-top: -43px; margin-bottom: 43px; }
