--- a/template/iCMS/public.dialog.htm
+++ b/template/iCMS/public.dialog.htm
@@ -1,8 +1,9 @@
 <div id="iPHP-DIALOG" class="hide"><img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......</div>
-<div id="iCMS-MODAL" class="modal hide">
+
+<div id="iCMS-MODAL" class="modal">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3>iCMS 提示</h3>
+    <h3 class="modal-title">iCMS 提示</h3>
   </div>
   <div class="modal-body">
     <p class="modal-loading"><img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......</p>
