--- a/template/iCMS/public.ui.htm
+++ b/template/iCMS/public.ui.htm
@@ -1,7 +1,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta content="iDreamSoft Inc." name="Copyright" />
-<link href="<!--{$iCMS.UI}-->/bootstrap-2.3.1/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+<link href="<!--{$iCMS.UI}-->/bootstrap/2.3.1/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 <link href="<!--{$iCMS.UI}-->/font-awesome-4.1.0/css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
 <link href="<!--{$iCMS.UI}-->/artDialog-5.0.4/skins/default.css" type="text/css" rel="stylesheet"/>
 <link href="<!--{$iCMS.UI}-->/iCMS-6.0.0.css" type="text/css" rel="stylesheet"/>
@@ -14,7 +14,7 @@
 
 <script src="<!--{$iCMS.UI}-->/jquery-1.11.0.min.js"></script>
 <!--{if $ui.script}-->
-<script src="<!--{$iCMS.UI}-->/bootstrap-2.3.1/js/bootstrap.min.js"></script>
+<script src="<!--{$iCMS.UI}-->/bootstrap/2.3.1/js/bootstrap.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/artDialog-5.0.4/artDialog.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/artDialog-5.0.4/artDialog.plugins.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/jquery.poshytip.min.js"></script>
